objects/Partner_Quarterly_Managed_Account_Count__c.object
<CustomObject>
    <fields>
        <fullName>Child_Accounts_End_of_Quarter_Count__c</fullName>
        <label>Child Accounts End of Quarter Count</label>
        <summaryForeignKey>Partner_Quarterly_Managed_Child_Account__c.Partner_Quarterly_Managed_Account_Count__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>End_of_Quarter_Date__c</fullName>
        <label>End of Quarter Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Parent_Account__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Parent Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Partner Quarterly Managed Account Count</relationshipLabel>
        <relationshipName>Partner_Quarterly_Managed_Account_Count</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Partner Quarterly Managed Account Count</label>
    <nameField>
        <displayFormat>PQMAC-{0000000}</displayFormat>
        <label>Partner Quarterly Managed Account Count</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Partner Quarterly Managed Account Count</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>